# system-epn

./: .clang-format  .gitignore  CMakeLists.txt  ContractResponsibilities.md  Data.md  README.md  Resources.md  SUMMARY.md  add_contract.cmake
contracts/: CMakeLists.txt  README.md  add_contract.cmake
contracts/core/: CMakeLists.txt  README.md  errormessages.hpp  fixedprops.hpp
contracts/core/data_types/: Asset.cpp  Frequency.cpp  Memo.cpp
contracts/core/data_types/include/: Asset.hpp  Frequency.hpp  Memo.hpp
contracts/core/schema/: Asset.hpp  Frequency.hpp  Memo.hpp
contracts/exec/: CMakeLists.txt  _dispatcher.cpp
contracts/exec/contract/: exec.cpp
contracts/exec/contract/include/: exec.hpp  ricardians.hpp
contracts/system/: CMakeLists.txt  README.md
contracts/system/contract/: donations.cpp
contracts/system/contract/include/: donations.hpp  paycontracts.hpp
contracts/system/include/: _dispatcher.hpp  donations.hpp  fixedprops.hpp  paycontracts.hpp
contracts/system/interface/: Donations.cpp  Donations.md  README.md  donationsIntf.cpp  donationsIntf.md
contracts/system/interface/include/: Donations.hpp  donationsIntf.hpp
contracts/system/ricardian/: donations-ricardian.cpp  ricardians.hpp
contracts/system/schema/: Asset.hpp  DonationDraft.hpp  DonationDraft.md  DonationSignature.hpp  DonationSignature.md  Donations.hpp  README.md
contracts/system/src/: _dispatcher.cpp  donations.cpp  paycontracts.cpp
contracts/system/test/: README.md  epn_test_chain.cpp  helpers.cpp  test-system.cpp  tests.md
contracts/system/test/include/: epn_test_chain.hpp  helpers.hpp
design/: ContractResponsibilities.md  Cron.md  Microforks.md  README.md  Resources.md  SmartContractSecurity.md
include/: _dispatcher.hpp  donations.hpp  errormessages.hpp  fixedprops.hpp  paycontracts.hpp
ricardian/: donations-ricardian.cpp  paycontracts-ricardian.cpp
schema/: Asset.hpp  Donations.hpp  Donations.md  Frequency.hpp  Memo.hpp  Schema1.hpp  storage.md
src/: _dispatcher.cpp  donations.cpp  paycontracts.cpp
test/: epn_test_chain.cpp  epn_test_nodeos.cpp  helpers.cpp  test-epn.cpp  test-system_epn.cpp  tests.md
test/include/: epn_test_chain.hpp  epn_test_nodeos.hpp  helpers.hpp  ramconsumption.hpp
